--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="home-social">
         <a href="https://www.hackerrank.com/profile/gowtham5959" target="_blank" class="home-social-icon">
              <i class='bx bx-code-block' ></i></a>
-        <a href="https://https://github.com/gowtham5959" target="_blank" class="home-social-icon"><i
+        <a href="https://github.com/gowtham5959" target="_blank" class="home-social-icon"><i
             class="bx bxl-github"></i></a>
       </div>
 
@@ -92,7 +92,7 @@
         <div style="text-align: center">
           <h2 class="about-subtitle">I'am Santhosh Kumar</h2>
           <p class="about-text">
-            SQL developer with Azure, Power BI. Experienced in Azure cloud technology (ADF, ABS, ADLS, Data Bricks, Key Vault, etc) written multiple stored procedures,complex queries, views, index, query optimization in T-SQL (DDL, DML, DQL). Created single page dashboard, Data visualization in Power BI.
+            SQL developer with SSIS, Power BI. Experienced in Azure cloud technology, written multiple stored procedures,complex queries, views, index, query optimization in T-SQL (DDL, DML, DQL). Created single page dashboard, Data visualization in Power BI.
           </p>
           <br />
           
@@ -343,7 +343,7 @@
           </div>
         </div>
 
- <div class="project-container">
+<!-- <div class="project-container"> -->
         <div class="project-img">
           <img src="assets/img/port.png" alt="Reddit.com" />
           <p class="project-title">Portfolio</p>
@@ -355,11 +355,11 @@
             <br /> HTML | CSS 
           </p>
           <div class="project-btns">
-            <a href="https://github.com/salakhas/epicGames" target="_blank" class="small-btn button">
+            <a href="https://github.com/gowtham5959/Portfolio" target="_blank" class="small-btn button">
 
               <i class="bx bxl-github"></i>
             </a>
-            <a href="https://epic-games-web.vercel.app/" target="_blank" class="small-btn button">
+            <a href="https://gowtham5959.github.io/Portfolio/" target="_blank" class="small-btn button">
               Live
             </a>
           </div>
@@ -374,11 +374,11 @@
     <h2 class="section-title">Get in Touch</h2>
     <p class="footer-title">Santhosh Kumar</p>
     <div class="footer-social">
-  <!--    <a href="https://www.linkedin.com/in/tushar-sahu-3b9a79204/" target="_blank" class="footer-icon"><i
+  <!--    <a href="https://www.linkedin.com/in/gowtham5959/" target="_blank" class="footer-icon"><i
           class="bx bxl-linkedin">
           <br />
           LinkedIn</i></a>
-      <a href="https://twitter.com/Tushars2526" target="_blank" class="footer-icon"><i class="bx bxl-twitter">
+      <a href="https://twitter.com/gowtham5959" target="_blank" class="footer-icon"><i class="bx bxl-twitter">
           <br />
           Twitter</i></a>
 -->
