--- a/index.html
+++ b/index.html
@@ -342,8 +342,9 @@
             </a>
           </div>
         </div>
+       </div>
 
-<!-- <div class="project-container"> -->
+ <div class="project-container"> 
         <div class="project-img">
           <img src="assets/img/port.png" alt="Reddit.com" />
           <p class="project-title">Portfolio</p>
